Online Feature Store

--- a/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
@@ -1,9 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a986564a",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Create empty feature groups for Online Feature Store\"\n",
+    "date: 2021-04-25\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c363e54d",
+   "id": "3ef8e3f0",
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +30,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>7</td><td>application_1619136786197_0008</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619136786197_0008/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619136786197_0008_01_000001/OnlineFSDemo__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>1</td><td>application_1619309085643_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619309085643_0002/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619309085643_0002_01_000001/OnlineFSdemo__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -41,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6cb0a84",
+   "id": "efdd9239",
    "metadata": {},
    "source": [
     "# Create empty feature groups \n",
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b76b113",
+   "id": "f330cabe",
    "metadata": {},
    "source": [
     "### Define schema for feature groups"
@@ -59,14 +72,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "be50690f",
+   "id": "8ffcf548",
    "metadata": {},
    "outputs": [],
    "source": [
     "card_schema = StructType([StructField('tid', StringType(), True),\n",
-    "                         StructField('datetime', StringType(), True),\n",
-    "                         StructField('cc_num', LongType(), True),\n",
-    "                         StructField('amount', DoubleType(), True)])\n",
+    "                          StructField('datetime', StringType(), True),\n",
+    "                          StructField('cc_num', LongType(), True),\n",
+    "                          StructField('amount', DoubleType(), True)])\n",
     "\n",
     "schema_10m = StructType([StructField('cc_num', LongType(), True),\n",
     "                         StructField('num_trans_per_10m', LongType(), True),\n",
@@ -86,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a04d72",
+   "id": "d9f70f3b",
    "metadata": {},
    "source": [
     "### Create empty spark dataframes "
@@ -95,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b3a085f0",
+   "id": "2d9e7ee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feacc85c",
+   "id": "1df1bc68",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -116,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "75e1f659",
+   "id": "334fbb72",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2be1dc",
+   "id": "b9925e1a",
    "metadata": {},
    "source": [
     "### Create feature group metadata objects and save empty spark dataframes to materialise them in hopsworks feature store.\n",
@@ -147,23 +160,23 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "73ff6cfa",
+   "id": "e9dc8f4e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa46a85df50>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f3cd6d39510>"
      ]
     }
    ],
    "source": [
     "card_transactions = fs.create_feature_group(\"card_transactions\", \n",
-    "                                              version = 1,\n",
-    "                                              online_enabled=True, \n",
-    "                                              statistics_config=False, \n",
-    "                                              primary_key=[\"tid\"])\n",
+    "                                             version = 1,\n",
+    "                                             online_enabled=False, \n",
+    "                                             statistics_config=False, \n",
+    "                                             primary_key=[\"tid\"])\n",
     "\n",
     "card_transactions.save(empty_card_df)"
    ]
@@ -171,14 +184,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7169a99c",
+   "id": "4cd9d834",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa46a3debd0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f3cd68cd590>"
      ]
     }
    ],
@@ -195,14 +208,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9ea66a09",
+   "id": "1b269be0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa46a3de510>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f3cd68e1bd0>"
      ]
     }
    ],
@@ -219,14 +232,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "96148435",
+   "id": "4700fb09",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa46a3a2250>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f3cd6d18990>"
      ]
     }
    ],
@@ -243,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e98e4a92",
+   "id": "243c7b91",
    "metadata": {},
    "outputs": [],
    "source": []
