--- a/notebooks/featurestore/hsfs/online_featurestore/2_produce_transactions.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/2_produce_transactions.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Generate credit card transactions data and send to kafka topic\"\n",
+    "date: 2021-04-25\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -894,7 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save labels as separate File"
+    "## Save labels as separate file"
    ]
   },
   {
