--- a/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6e80ad1",
+   "id": "822d865e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Windowed aggregations using spark streaming and ingestion to the online feature store\"\n",
+    "date: 2021-04-25\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "552e4f28",
    "metadata": {},
    "source": [
     "## Import necessary libraries"
@@ -11,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "657bf02e",
+   "id": "cb4be081",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +38,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>8</td><td>application_1619136786197_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619136786197_0009/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619136786197_0009_01_000001/OnlineFSDemo__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1619309085643_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619309085643_0003/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619309085643_0003_01_000001/OnlineFSdemo__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -54,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "511add7d",
+   "id": "79db207a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99da095",
+   "id": "9f3642eb",
    "metadata": {},
    "source": [
     "## Create a stream from the kafka topic\n"
@@ -73,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3fe421d9",
+   "id": "ce81a233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f7022bf6",
+   "id": "3694e56c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0b9da8a2",
+   "id": "435c2f2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91e44f42",
+   "id": "16aa9413",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f4a30cc5",
+   "id": "74fed8e4",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0758c0d0",
+   "id": "e649ce71",
    "metadata": {},
    "source": [
     "## Create windowing aggregations over different time windows using spark streaming."
@@ -172,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8a9d4e5a",
+   "id": "4c0be2e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,15 +195,13 @@
     "    .withWatermark(\"datetime\", \"60 minutes\") \\\n",
     "    .groupBy(window(\"datetime\", \"10 minutes\"), \"cc_num\") \\\n",
     "    .agg(avg(\"amount\").alias(\"avg_amt_per_10m\"), stddev(\"amount\").alias(\"stdev_amt_per_10m\"), count(\"cc_num\").alias(\"num_trans_per_10m\"))\\\n",
-    "    .select(\"cc_num\", \"num_trans_per_10m\", \"avg_amt_per_10m\", \"stdev_amt_per_10m\")\n",
-    "#    .select(\"cc_num\", \"avg_amt_per_10m\", \"num_trans_per_10m\", date_format(\"window.start\",\"yyyy-MM-dd HH:mm:ss\").alias(\"start\"), date_format(\"window.end\",\"yyyy-MM-dd HH:mm:ss\").alias(\"end\"))\n",
-    "#    .selectExpr(\"cc_num\", \"avg_amt_per_10m\", \"num_trans_per_10m\", \"CAST(window.start as timestamp) window\", \"CAST(window.end as timestamp)\")"
+    "    .select(\"cc_num\", \"num_trans_per_10m\", \"avg_amt_per_10m\", \"stdev_amt_per_10m\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c4adf5df",
+   "id": "fd4974fc",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "15ac9c1e",
+   "id": "a616b44e",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "39bb72ed",
+   "id": "e4095702",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "76d79736",
+   "id": "8a34ee8c",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c3b88724",
+   "id": "358afe02",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "df9aa996",
+   "id": "5fbb3862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a313cca3",
+   "id": "21cd49a1",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c2cc3caf",
+   "id": "943154c4",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e454d3",
+   "id": "49f461cd",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -352,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "53952d51",
+   "id": "f88e1112",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2fecf15",
+   "id": "fc0b5927",
    "metadata": {},
    "source": [
     "## Get feature groups from hopsworks feature store."
@@ -381,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "42306617",
+   "id": "35492fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e5a41a",
+   "id": "4e4af9db",
    "metadata": {},
    "source": [
     "## Insert streaming dataframes to the online feature group\n",
@@ -404,25 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9a93e7cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "StatisticsWarning: Stream ingestion for feature group `card_transactions`, with version `1` will not compute statistics."
-     ]
-    }
-   ],
-   "source": [
-    "query_transactions = card_transactions.insert_stream(df_deser)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "3bbda1cf",
+   "id": "7e5f986b",
    "metadata": {},
    "outputs": [
     {
@@ -439,8 +432,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "34aa0519",
+   "execution_count": 20,
+   "id": "ff8da18a",
    "metadata": {},
    "outputs": [
     {
@@ -457,8 +450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "44ebb53a",
+   "execution_count": 21,
+   "id": "22d0d925",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0490227a",
+   "id": "75956f8f",
    "metadata": {},
    "source": [
     "### Check if spark streaming query is active"
@@ -484,25 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2b728375",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True"
-     ]
-    }
-   ],
-   "source": [
-    "query_transactions.isActive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "8faac066",
+   "id": "a7aff267",
    "metadata": {},
    "outputs": [
     {
@@ -519,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6824edc7",
+   "execution_count": 24,
+   "id": "d9fb7e92",
    "metadata": {},
    "outputs": [
     {
@@ -537,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "ce75972f",
+   "execution_count": 25,
+   "id": "df1f159b",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f4c47a",
+   "id": "5a12dbdf",
    "metadata": {},
    "source": [
     "#### We can also check status of a query and if there are any exceptions trown."
@@ -563,8 +538,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "2add71b0",
+   "execution_count": 26,
+   "id": "dcd88cac",
    "metadata": {},
    "outputs": [
     {
@@ -581,8 +556,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "1b14b4d5",
+   "execution_count": 27,
+   "id": "71df475f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b231f47",
+   "id": "19f6df5b",
    "metadata": {},
    "source": [
     "### Lets check if data was ingested in to the online feature store"
@@ -599,8 +574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "a9f7b6c7",
+   "execution_count": 28,
+   "id": "4745a34a",
    "metadata": {},
    "outputs": [
     {
@@ -610,26 +585,26 @@
       "+----------------+-----------------+------------------+------------------+\n",
       "|cc_num          |num_trans_per_12h|avg_amt_per_12h   |stdev_amt_per_12h |\n",
       "+----------------+-----------------+------------------+------------------+\n",
-      "|4444037300542691|7                |154.51857142857145|238.93552871214524|\n",
-      "|4609072304828342|7                |176.02714285714288|263.06316920176454|\n",
-      "|4161715127983823|10               |928.3030000000001 |1809.7934375689888|\n",
-      "|4223253728365626|13               |1201.686153846154 |2724.0564739389993|\n",
-      "|4572259224622748|9                |1291.5500000000002|2495.189283160699 |\n",
-      "|4436298663019939|11               |149.78636363636366|235.75729924109365|\n",
-      "|4231082502226286|10               |977.8430000000001 |2071.1095165208753|\n",
-      "|4159210768503456|6                |37.303333333333335|26.403001092047596|\n",
-      "|4090612125343330|15               |646.7259999999999 |1336.9214811370616|\n",
-      "|4416410688550228|11               |663.0627272727273 |1631.6188600717442|\n",
-      "|4811343280984688|6                |237.08166666666662|305.3312340666554 |\n",
-      "|4853206196105715|10               |1077.6439999999998|2793.72050986255  |\n",
-      "|4032763187099525|10               |425.006           |1204.4018071612704|\n",
-      "|4645884898081724|8                |171.48125000000002|200.51632676222223|\n",
-      "|4524584153018280|7                |160.18714285714285|223.19407330200963|\n",
-      "|4815447301191763|6                |78.35833333333333 |29.206839895248287|\n",
-      "|4872287670027309|3                |260.63666666666666|427.3684126527525 |\n",
-      "|4734811798843814|7                |122.81714285714285|166.56810466135522|\n",
-      "|4609746692923340|9                |1401.2866666666669|3007.164227935514 |\n",
-      "|4526611032294580|6                |109.52166666666666|150.55966530471125|\n",
+      "|4226063306212844|5                |1134.8            |2370.804468076185 |\n",
+      "|4467512729899486|9                |205.1577777777778 |303.5732691945133 |\n",
+      "|4232153519700594|12               |129.64416666666668|250.8604352463132 |\n",
+      "|4376360021712050|8                |78.41125          |122.69854702102805|\n",
+      "|4867010117638802|8                |1224.9825         |3033.6029145826396|\n",
+      "|4956860373932956|8                |598.58125         |1242.149174184319 |\n",
+      "|4997591057565538|7                |127.6014285714286 |211.0837646866421 |\n",
+      "|4965123463794391|9                |96.02777777777777 |179.76414115291306|\n",
+      "|4671096685272336|5                |146.296           |199.37470458912284|\n",
+      "|4001837582277998|7                |193.3242857142857 |292.91272988480955|\n",
+      "|4135449811055770|6                |1212.2166666666667|1507.44335556155  |\n",
+      "|4136262720215016|11               |811.387272727273  |2476.740706473291 |\n",
+      "|4208317936968510|7                |267.33285714285716|330.5734197176318 |\n",
+      "|4893308344742860|8                |290.56            |333.44267401930256|\n",
+      "|4213741526478791|5                |137.602           |185.38636659689945|\n",
+      "|4260567335033291|9                |329.4222222222222 |306.2573898609541 |\n",
+      "|4683617042712171|8                |32.47             |32.10560031254005 |\n",
+      "|4802174255861762|9                |709.7955555555556 |1933.2421975602997|\n",
+      "|4925013053127624|11               |855.5918181818183 |1638.8087694714   |\n",
+      "|4830349319515887|12               |975.3983333333332 |2249.727648986684 |\n",
       "+----------------+-----------------+------------------+------------------+\n",
       "only showing top 20 rows"
      ]
@@ -641,8 +616,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d19e8757",
+   "execution_count": 29,
+   "id": "33f75d52",
    "metadata": {},
    "outputs": [
     {
@@ -658,29 +633,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "c8f448c4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+--------+------+------+\n",
-      "|tid|datetime|cc_num|amount|\n",
-      "+---+--------+------+------+\n",
-      "+---+--------+------+------+"
-     ]
-    }
-   ],
-   "source": [
-    "fs.sql(\"SELECT * FROM card_transactions_1\",online=True).show(20,False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "5e1c621b",
+   "id": "a456f2d2",
    "metadata": {},
    "source": [
     "## Insert data in to offline feature group.\n",
@@ -689,8 +643,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "4b2d980b",
+   "execution_count": 30,
+   "id": "9018c73b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,15 +662,15 @@
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_card = df_deser.writeStream.foreachBatch(foreach_batch_function_card)\\\n",
-    ".option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-card\")\\\n",
-    ".trigger(processingTime=\"10 seconds\")\\\n",
-    ".start()    "
+    "                    .option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-card\")\\\n",
+    "                    .trigger(processingTime=\"10 seconds\")\\\n",
+    "                    .start()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "47353af9",
+   "execution_count": 31,
+   "id": "87422b85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,15 +688,15 @@
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_10m = windowed10mSignalDF.writeStream.foreachBatch(foreach_batch_function_10m)\\\n",
-    ".option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-data10m\")\\\n",
-    ".trigger(processingTime=\"10 seconds\")\\\n",
-    ".start()    "
+    "                              .option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-data10m\")\\\n",
+    "                              .trigger(processingTime=\"10 seconds\")\\\n",
+    "                              .start()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "ff0a76df",
+   "execution_count": 32,
+   "id": "80247c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,15 +714,15 @@
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_1h = windowed1hSignalDF.writeStream.foreachBatch(foreach_batch_function_1h)\\\n",
-    ".option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-1h\")\\\n",
-    ".trigger(processingTime=\"10 seconds\")\\\n",
-    ".start()"
+    "                            .option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-1h\")\\\n",
+    "                            .trigger(processingTime=\"10 seconds\")\\\n",
+    "                            .start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "ab737278",
+   "execution_count": 37,
+   "id": "51c1f377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,14 +740,14 @@
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_12h = windowed12hSignalDF.writeStream.foreachBatch(foreach_batch_function_12h)\\\n",
-    ".option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-12h\")\\\n",
-    ".trigger(processingTime=\"10 seconds\")\\\n",
-    ".start()"
+    "                              .option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-12h\")\\\n",
+    "                              .trigger(processingTime=\"10 seconds\")\\\n",
+    "                              .start()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bb042c75",
+   "id": "733d5ca7",
    "metadata": {},
    "source": [
     "### Check if queries are still active"
@@ -801,8 +755,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "2a5d4f5f",
+   "execution_count": 39,
+   "id": "b4f2eb70",
    "metadata": {},
    "outputs": [
     {
@@ -819,8 +773,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "8549523d",
+   "execution_count": 40,
+   "id": "667a24b2",
    "metadata": {},
    "outputs": [
     {
@@ -837,8 +791,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "7d4cd267",
+   "execution_count": 41,
+   "id": "62deb484",
    "metadata": {},
    "outputs": [
     {
@@ -855,8 +809,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "d190367c",
+   "execution_count": 42,
+   "id": "62301af9",
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18ee4126",
+   "id": "4dd4b2bc",
    "metadata": {},
    "source": [
     "### Stop queries\n",
@@ -882,12 +836,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "d90d5165",
+   "execution_count": 43,
+   "id": "95340e46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_transactions.stop()\n",
     "query_10m.stop()\n",
     "query_1h.stop()\n",
     "query_12h.stop()"
@@ -895,8 +848,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "d1fcc2bd",
+   "execution_count": 44,
+   "id": "69217b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,6 +858,14 @@
     "hudi_1h.stop()\n",
     "hudi_12h.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fa788d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
