--- a/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2558dbb4",
+   "id": "b68c127b",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Create training dataset from online feature store enabled feature groups\"\n",
+    "date: 2021-04-25\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2346e772",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -11,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f5f6b7c5",
+   "id": "d9565abd",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +38,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>62</td><td>application_1618238932364_0067</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ofs-head.hw.se:8089/proxy/application_1618238932364_0067/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ofs-w1.internal.cloudapp.net:8044/node/containerlogs/container_1618238932364_0067_01_000001/card_fraud_demo__davit000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>3</td><td>application_1619309085643_0004</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619309085643_0004/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619309085643_0004_01_000001/OnlineFSdemo__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ebc9160",
+   "id": "1c306817",
    "metadata": {},
    "source": [
     "## Get feature groups"
@@ -61,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "afca6163",
+   "id": "4a1a0ef3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf06eb6",
+   "id": "1b6f705b",
    "metadata": {},
    "source": [
     "## Create training dataset"
@@ -80,22 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5ec4800c",
+   "execution_count": 3,
+   "id": "c92305ac",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f9c91ddff50>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7f49f3111410>"
      ]
     }
    ],
    "source": [
     "query = card_transactions_10m_agg.select([\"stdev_amt_per_10m\", \"avg_amt_per_10m\", \"num_trans_per_10m\"])\\\n",
-    "                .join(card_transactions_1h_agg.select([\"stdev_amt_per_1h\", \"avg_amt_per_1h\", \"num_trans_per_1h\"]))\\\n",
-    "                .join(card_transactions_12h_agg.select([\"stdev_amt_per_12h\", \"avg_amt_per_12h\", \"num_trans_per_12h\"]))\n",
+    "                                 .join(card_transactions_1h_agg.select([\"stdev_amt_per_1h\", \"avg_amt_per_1h\", \"num_trans_per_1h\"]))\\\n",
+    "                                 .join(card_transactions_12h_agg.select([\"stdev_amt_per_12h\", \"avg_amt_per_12h\", \"num_trans_per_12h\"]))\n",
     "\n",
     "td_meta = fs.create_training_dataset(name=\"card_fraud_model\",\n",
     "                               description=\"Training dataset to train card fraud model\",\n",
@@ -108,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f87c5e6",
+   "id": "42fcd555",
    "metadata": {},
    "outputs": [],
    "source": []
