--- a/notebooks/featurestore/hsfs/online_featurestore/5_online_serving.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/5_online_serving.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5dbff0e3",
+   "id": "48aa4619",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Online Feature Serving\"\n",
+    "date: 2021-04-25\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "847bcd09",
    "metadata": {},
    "source": [
     "## Connect to the Feature Store"
@@ -11,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "63046a40",
+   "id": "f5c082fc",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +38,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>63</td><td>application_1618238932364_0068</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ofs-head.hw.se:8089/proxy/application_1618238932364_0068/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ofs-w0.internal.cloudapp.net:8044/node/containerlogs/container_1618238932364_0068_01_000001/card_fraud_demo__davit000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>4</td><td>application_1619309085643_0005</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619309085643_0005/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619309085643_0005_01_000001/OnlineFSdemo__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2429242",
+   "id": "0cbb5fae",
    "metadata": {},
    "source": [
     "## Get training dataset"
@@ -61,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a9c9be64",
+   "id": "2f1d70c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58934015",
+   "id": "d7c493a1",
    "metadata": {},
    "source": [
     "To identify which primary key names are used for this training dataset query use serving_keys method"
@@ -79,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f4562fea",
+   "id": "44ed7c10",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddefef32",
+   "id": "c02486d5",
    "metadata": {},
    "source": [
     "For demo purposes lets prepare list of primary key values that we are interested in to buils feature vectore from online feature store"
@@ -107,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a46b6c5a",
+   "id": "8f9ffb0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f55b141c",
+   "id": "1acc69ad",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9020b39",
+   "id": "ac31d523",
    "metadata": {},
    "outputs": [],
    "source": []
